[gd_scene load_steps=2 format=3 uid="uid://bb6x8i612l3j4"]

[ext_resource type="Script" path="res://singleplayer_menu.gd" id="1_51k3h"]

[node name="SingleplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_51k3h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_right = 155.0
grow_horizontal = 2
grow_vertical = 2

[node name="MyPongGame" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "My
Pong
Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerNameField" type="TextEdit" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "Enter Player Name"

[node name="StartGameButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="EasyModeButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Easy"

[node name="MediumModeButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Medium"

[node name="HardModeButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Hard"

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit To Main Menu"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed" flags=18]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/EasyModeButton" to="." method="_on_easy_mode_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MediumModeButton" to="." method="_on_medium_mode_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HardModeButton" to="." method="_on_hard_mode_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
